whitespace fix

--- a/modules/core.scss
+++ b/modules/core.scss
@@ -3,6 +3,7 @@ $gel-type-enable--markup-output: true;
 $gel-grid-1280-toggle-class: false;
 $gel-grid-enable--box-sizing: true;
 $gel-type-enable--font-family: true;
+$gel-grid-enable--whitespace-fix: true;
 
 @import "../bower_components/sass-mq/mq";
 @import "../bower_components/gel-sass-tools/sass-tools";
